<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    >

    <EditText
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"
        android:singleLine="true"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comfirm_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="register"
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginVertical="100sp"
        android:id="@+id/responseTextRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textStyle="bold" />
</LinearLayout>