<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/background"
    android:gravity="center"
    >

    <EditText
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_username"
        android:singleLine="true"
        android:textStyle="bold"
        android:autofillHints="" />

    <EditText
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:onClick="submit"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginVertical="100sp"
        android:id="@+id/responseTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textStyle="bold" />

</LinearLayout>